# simple-app-development

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/basics/: Dockerfile
simple-app-development/: test_app.py
simple-app-development/basics/de/: Einführung zu Jupyter Notebooks.ipynb
