[tool.poetry]
name = "simple-app-development"
version = "0.1.0"
description = "Project aiming to provide school kids a basic understand how to develop an app"
authors = ["Martin Krause"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
